# descent-engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CODING_STANDARDS.md  Doxyfile  README.md  ROADMAP.md  TODO.md  annotated.html  classes.html  dir_000001_000000.html  dir_000001_000005.html  dir_000001_000006.html  dir_000001_000010.html  dir_000001_000012.html  dir_000002_000006.html  dir_000005_000006.html  dir_000006_000001.html  dir_000006_000004.html  dir_000007_000005.html  dir_000009_000012.html  dir_000010_000012.html  dir_000011_000005.html  dir_000012_000008.html  dir_02b775c02355bf8112c5b2e6704c4beb.html  dir_02b775c02355bf8112c5b2e6704c4beb_dep.map  dir_02b775c02355bf8112c5b2e6704c4beb_dep.md5  dir_379714c4cf3180a880357ce2c0dde9ad.html  dir_379714c4cf3180a880357ce2c0dde9ad_dep.map  dir_379714c4cf3180a880357ce2c0dde9ad_dep.md5  dir_45632e095e16c2c273c867865c8a293b.html  dir_45632e095e16c2c273c867865c8a293b_dep.map  dir_45632e095e16c2c273c867865c8a293b_dep.md5  dir_48d18d1183ca65e66f34be659c308093.html  dir_48d18d1183ca65e66f34be659c308093_dep.map  dir_48d18d1183ca65e66f34be659c308093_dep.md5  dir_4e8d938e9ddb5a617c200d5739d1f41a.html  dir_607c2b04221407f089e3565dc729f472.html  dir_607c2b04221407f089e3565dc729f472_dep.map  (+77 more)
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  build.yml  doxygen.yml
config/: Doxyfile.in  metadata.h.in
d0/d12/: intrin_8h.html  intrin_8h_source.html
d0/d34/: sysalloc_8h__dep__incl.map  sysalloc_8h__dep__incl.md5
d0/d37/: qutex_8h__incl.map  qutex_8h__incl.md5
d0/d75/: futex_8h__incl.map  futex_8h__incl.md5
d0/d76/: intern_2intern_2thread_2thread_8h.html  intern_2intern_2thread_2thread_8h_source.html
d0/d77/: futex_8h.html  futex_8h_source.html
d0/d87/: log_8h__incl.map  log_8h__incl.md5
d0/d9e/: rwlock_8h__incl.map  rwlock_8h__incl.md5
d0/db9/: barrier_8h__incl.map  barrier_8h__incl.md5
d0/de4/: structRecursiveMutex.html
d0/df8/: mutex_8h.html  mutex_8h_source.html
d1/d00/: include_2descent_2time_8h.html  include_2descent_2time_8h_source.html
d1/d14/: intrin_8h__incl.map  intrin_8h__incl.md5
d1/d2b/: mutex_8h__dep__incl.map  mutex_8h__dep__incl.md5
d1/d2e/: main-page_8dox.html
d1/d30/: atomic__types_8h__dep__incl.map  atomic__types_8h__dep__incl.md5
d1/d5e/: api-conventions_8dox.html
d1/d73/: endian_8h__incl.map  endian_8h__incl.md5
d1/d84/: endian_8h.html  endian_8h_source.html
d1/da1/: sysalloc_8h.html  sysalloc_8h_source.html
d1/ddc/: intrin_8h__dep__incl.map
d1/df7/: utilities_2intrin_8h__incl.map  utilities_2intrin_8h__incl.md5
d2/d05/: structAlloc.html
d2/d09/: structThreadName.html
d2/d11/: codes_8h.html  codes_8h_source.html
d2/d35/: arithmetic_8h.html  arithmetic_8h_source.html
d2/d38/: nchar_8h.html  nchar_8h_source.html
d2/d4d/: file_8h.html  file_8h_source.html
d2/d8a/: tid_8h.html  tid_8h_source.html
d2/da4/: structMutex.html
d2/de2/: tls_8h__incl.map  tls_8h__incl.md5
d2/deb/: version_8h__dep__incl.map  version_8h__dep__incl.md5
d2/dfe/: alloc_8h.html  alloc_8h_source.html
d3/d0e/: qutex_8h.html  qutex_8h_source.html
d3/d21/: thread_2thread_8h.html  thread_2thread_8h_source.html
d3/d32/: atomic_8h__incl.map  atomic_8h__incl.md5
d3/d61/: modules_8h.html  modules_8h_source.html  rcode_8h.html  rcode_8h_source.html
d3/d7b/: nchar_8h__incl.map  nchar_8h__incl.md5
d3/dad/: sysalloc_8h__incl.map  sysalloc_8h__incl.md5
d3/dce/: structSpinLock.html
d3/de8/: group__atomic.html  group__atomic.map  group__atomic.md5
d3/dfb/: include_2descent_2thread_2thread_8h.html  include_2descent_2thread_2thread_8h_source.html
d4/d0c/: call__once_8h__dep__incl.map  call__once_8h__dep__incl.md5
d4/d31/: condition_8h__dep__incl.map  condition_8h__dep__incl.md5
d4/d46/: structVersion.html
d4/d48/: structFobjInfo.html
d4/d4f/: cli_8h__incl.map  cli_8h__incl.md5
d4/d62/: utf__8_8h__incl.map  utf__8_8h__incl.md5
d4/d73/: structThreadAttributes.html
d4/d95/: intern_2intern_2time_8h__incl.map  intern_2intern_2time_8h__incl.md5
d4/dc8/: utilities_2intrin_8h.html  utilities_2intrin_8h_source.html
d4/dcb/: atomic__types_8h.html  atomic__types_8h_source.html
d4/deb/: recursive__mutex_8h.html  recursive__mutex_8h_source.html
d5/d12/: call__once_8h__incl.map  call__once_8h__incl.md5
d5/d4b/: api_8h__dep__incl.map  api_8h__dep__incl.md5
d5/d77/: logging_8h.html  logging_8h_source.html
d5/d82/: semaphore_8h__dep__incl.map  semaphore_8h__dep__incl.md5
d5/da4/: opaque_8h__dep__incl.map  opaque_8h__dep__incl.md5
d5/dc4/: core_8h.html  core_8h_source.html
d5/dce/: thread_2thread_8h__incl.map  thread_2thread_8h__incl.md5
d6/d08/: atomic_8h__dep__incl.map  atomic_8h__dep__incl.md5
d6/d1d/: tid_8h__incl.map  tid_8h__incl.md5
doxygen/: api-conventions.dox  main-page.dox
examples/: CMakeLists.txt  cli.c  cli.h  main.c
exec/: main.c
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  (+72 more)
src/: CMakeLists.txt
src/core/: CMakeLists.txt  core.c
src/file/: CMakeLists.txt  dir.c  dir.h  dpath.c  file.c  file.h  file2.c  fobj.c  fobj.h  path.c  path.h
src/file/file/: handle.h
src/log/: CMakeLists.txt  log.c  tables.c  tables.h
src/string/: CMakeLists.txt  nchar.c
src/thread/: CMakeLists.txt  barrier.c  call_once.c  condition.c  futex.c  implementation.h  job_system.c  mutex.c  qutex.c  recursive_mutex.c  rwlock.c  semaphore.c  thread.c  thread_context.h  thread_handle.h  tid.c
src/thread/futex/: freebsd.ic  linux.ic  windows.ic
tests/: CMakeLists.txt  test-compile.c
tests/cli/: CMakeLists.txt  actions.c  actions.h  main.c
tests/compile/: CMakeLists.txt  main.c
(+265 files in other folders)
